# fdf

./: .gitignore  CMakeLists.txt  Makefile  antialiasing_krivoy_no_kakoy_est.c  fdf  lolkek.txt  main.c
inc/: fdf.h  libft.h
libft/: Makefile  ft_atoi_base.c  ft_nputchar.c  ft_strsplit.c
maps/: 42.fdf  color_test  ctest  test_rectangular
src/: .fdf.c.swp  antialiasing_krivoy_no_kakoy_est.c  auto_coloring.c  fdf.c  fdf_exit.c  main.c  map_twister.c  mapparser.c  pretty_terminal.c  supps.c  supps1.c  supps2.c  tty_configure.c  tty_print.c  tupa_chill.c  wu.c
src/mapparser/: .mapparser.c.swp  mapparse_test.c  mapparser.c  test
src/therads/: Makefile  music.c  thread.c
